ejercicio1 corregido