@@ -6,15 +6,11 @@ import java.util.stream.Collectors;
 public class Secretaria {
 
 	private List <Alumno> listaAlumnos;
-	
-	
+		
 	
 	public Secretaria(List<Alumno> listaAlumnos) {		
 		this.listaAlumnos = listaAlumnos;
 	}
-	
-	
-
 
 
 	public List<Alumno> getListaAlumnos() {
@@ -22,53 +18,67 @@ public class Secretaria {
 	}
 
 
-
-
-
 	public void setListaAlumnos(List<Alumno> listaAlumnos) {
 		this.listaAlumnos = listaAlumnos;
-	}
-
-
-
-	
+	}	
 
 
 	@Override
 	public String toString() {
 		return "Secretaria [listaAlumnos=" + listaAlumnos + "]";
-	}
-	
+	}	
 
 	public List<Alumno> alumnoNombre (String nombre) {
 		return listaAlumnos.stream()
 				.filter(a->a.getNombre().equalsIgnoreCase(nombre))
 				.distinct()
-				.collect(Collectors.toList());
+				.toList();
 	}
 	
-	public void alumnoNombre2 () {
+	public void mostrarAlumno1 () {
 		listaAlumnos.forEach(a -> System.out.println(a));
 	}
 	
-	public List<Alumno> nombreEmpiezaPor (String letra){
+	public void amostrarAlumno2() {
+		listaAlumnos.stream()
+		.forEach(System.out::println);
+	}
+	
+	public List<Alumno> nombreEmpiezaPor (char letra){
 		return listaAlumnos.stream()
-		.filter(a->a.getNombre().startsWith(letra))
+		.filter(a->a.getNombre().charAt(0)==letra)
 		.collect(Collectors.toList());
+	}
+	
+	public List<Alumno> nombreEmpiezaPor2 (String letra){
+		return listaAlumnos.stream()
+		.filter(a->a.getNombre().toUpperCase().equalsIgnoreCase(letra.toUpperCase()))
+		.toList();
 	}
 	
 	public int nAlumnos() {
 		return listaAlumnos.size();
 	}
 	
+	public long nAlumnos2() {
+		return listaAlumnos.stream()
+				.count();
+	}
+	
 	public List<Alumno> notaMayor9 (String curso){
 		return listaAlumnos.stream()
 				.filter(a->a.getNombreCurso().equalsIgnoreCase(curso))
 				.filter(a->a.getNotaMedia()>9)
-				.collect(Collectors.toList());
+				.toList();
 	}
 	
-	public List<Alumno> tresPrimeors () {
+	public void mostrarAlumnoMas9 (String curso){
+		notaMayor9(curso).stream()
+		.toList()
+		.forEach(System.out::println);
+	}
+	
+	public List<Alumno> tresPrimeros () {
 		return listaAlumnos.stream()
 		.limit(3)
 		.collect(Collectors.toList());
